角色和菜单的关联
