# model/request/menu.go
@@ -1,5 +1,7 @@
 package request
 
+import "github.com/Dlimingliang/go-admin/model"
+
 type MenuInfo struct {
 	ID        int    `json:"ID"`
 	RoutePath string `json:"path" binding:"required,min=1,max=20"`      //路由path
@@ -14,4 +16,9 @@ type MenuInfo struct {
 type MetaInfo struct {
 	Name string `json:"title" binding:"required,min=1,max=20"` //菜单名称
 	Icon string `json:"icon" binding:"required,min=1,max=20"`  //icon
+}
+
+type AddMenuAuthorityInfo struct {
+	Menus       []model.Menu `json:"menus"`       //菜单列表
+	AuthorityId string       `json:"authorityId"` // 角色ID
 }
